ui improvement. overflow fix

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -4,12 +4,13 @@
 }
 .login-overlay {
   background-color: rgba(0, 0, 0, 0);
-  height: 93vh;
+  height: 94vh;
   width: 100vw;
 }
 .login-card {
   background-color: rgb(5, 79, 139);
   padding: 5vh 5vh 5vh 5vh;
+  box-shadow: -3px 14px 29px -8px rgba(0,0,0,0.75);
 }
 
 .login-column {
